# CNN-wheel

./: .gitignore  Makefile  README.md  cnn_methods.py  cnn_methods.sample.py  pyproject.toml  requirements.txt  setup.py  test.py
.devcontainer/: devcontainer.json  install-dev-tools.sh
.devcontainer /: devcontainer.json  install-dev-tools.sh
cnn_methods/: base.py
cnn_methods/cpu/: base.py
cnn_methods/cuda/: __init__.py  base.py  fft.py  img2col.py
cnn_module/cpu/: base.py
cnn_module/cuda/: README.md  __init__.py  base.py  fft.py  img2col.py
conv2d_cuda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
custom_cnn/cpu/: _base.pyi
custom_cnn/cuda/: _base.pyi  _fft.pyi  _img2col.pyi
models/: README  custom_conv2d.py  model.py
models/bins/base/: 2025-06-02_23-59-43.pt
models/bins/cuda_base/: 2025-06-03_08-45.pt  2025-06-03_09-21.pt  2025-06-03_14-57.pt  2025-06-03_15-11.pt  2025-06-03_16-10.pt  2025-06-03_19-22.pt  2025-06-03_23-21.pt  2025-06-03_23-21_metrics.json
models/bins/cuda_fft/: 2025-06-03_22-37.pt  2025-06-03_22-37_metrics.json  2025-06-03_22-54.pt  2025-06-03_22-54_metrics.json  2025-06-03_23-31.pt  2025-06-03_23-31_metrics.json  2025-06-04_00-07.pt  2025-06-04_00-07_metrics.json
models/bins/official/: 2025-06-02_23-51-33.pt  2025-06-02_23-57-57.pt  2025-06-03_08-43.pt  (+2 more)
scripts/: build.sh  init.sh  test_conv.sh  train_test.py
scripts/inference/: inference.py
scripts/tests/: test_conv2d.py  test_torch.py
scripts/train/: train.py  train_test.py
src/cuda/: conv2d  conv2d_cuda.cpp  conv2d_kernel.cu
src/python/: README
(+14 files in other folders)
